--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
         <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
         <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">The power of communication is limited only by our imagination</p>
-        <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="#0">Get in touch</a>
+        <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
       </div>
     </div>
   </div>
@@ -62,7 +62,7 @@ title: Home
 <section id="situations" class="mw7-ns center ph2 pv4 pv5-l ph5-ns ph4-l">
   <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
   <article>
-    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+    <p class="db pv1 ph2 ph0-l black">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
@@ -74,10 +74,10 @@ title: Home
           </p>
         </div>
       </div>
-    </a>
+    </p>
   </article>
 <article>
-    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+    <p class="db pv1 ph2 ph0-l black">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/Storm_Clouds_-_License_for_£37_20_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/01309002-storm-clouds">
@@ -89,11 +89,11 @@ title: Home
           </p>
         </div>
       </div>
-    </a>
+    </p>
   </article>
 
   <article>
-    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+    <p class="db pv1 ph2 ph0-l black">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/Sidewalk_chess_-_License_for_£4_96_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/04785674-sidewalk-chess">
@@ -105,11 +105,11 @@ title: Home
           </p>
         </div>
       </div>
-    </a>
+    </p>
   </article>
 
   <article>
-    <a class="db pv1 ph2 ph0-l no-underline black dim" href="#0">
+    <p class="db pv1 ph2 ph0-l black">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
           <img src="{{ site.baseurl }}/images/Hot_Air_Balloons_-_License_for_£12_39_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/0197175-hot-air-balloons">
@@ -121,7 +121,7 @@ title: Home
           </p>
         </div>
       </div>
-    </a>
+    </p>
   </article>
 </section>
 
