--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
       </nav>
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
-        <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communications</h1>
+        <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communication</h1>
         <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">The power of communication is limited only by our imagination</p>
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
       </div>
@@ -31,20 +31,10 @@ title: Home
 <section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l">
   <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information and data makes new demands on all of us every day, especially those in leadership positions who must engage externally as much as they direct their own organisations.</p>
-
-  <p class="f3 ph2 ph4-l lh-copy mt2">Communicating effectively is becoming more complex:</p>
-  <ul class="f3 lh-copy mt2">
-    <li>People demand authenticity and immediacy, but trust in authority, leaders and brands is at an historic low</li>
-    <li>The walls between marketing, news, propaganda and disinformation are disappearing as people have become the new media</li>
-    <li>Privacy and confidentiality are under threat</li>
-    <li>Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space</li>
-    <li>Data and analytics have enabled unprecedented audience profiling and reach</li>
-  </ul>
-
-  <p class="f3 ph2 ph4-l lh-copy mt2">The forces of disruption and complexity in the business world demand high-level communications awareness from leaders</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information channels and data makes new demands on all of us every day, especially for large organizations and the people who lead them.</p>
 
   <p class="f3 f-sub-ns ph2 ph4-l lh-copy mt2 mb3 i">Ashbright was created to help companies, individuals and governments survive and thrive in this new fast-moving landscape.</p>
+
 </section>
 
 <section id="about" class="bg-black">
@@ -68,6 +58,22 @@ title: Home
           <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Where do I start?</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            The forces of disruption and complexity in the business world demand high-level communications awareness from leaders. Latest polling data shows that audiences want authenticity and immediacy, but trust in authority, leaders and brands is at an historic low. The separation between marketing, news, propaganda and disinformation are blurring as people have become the new media. Privacy and confidentiality are under threat. Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space. Data and analytics have enabled unprecedented audience profiling and reach. Ashbright has decades of experience in building state-of-the-art communications functions, helping leaders to gather intelligence and communicate effectively in an increasingly complex world.
+          </p>
+        </div>
+      </div>
+    </p>
+  </article>
+
+  <article>
+    <p class="db pv1 ph2 ph0-l black">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
           <h2 class="f2 ashblue ttu mt0-ns">Reputation</h2>
           <p class="f3 f5-l lh-copy mt0">
             As a high-profile individual, your reputation is a priceless asset. But with the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright has decades of experience helping high profile individuals and corporate leaders to manage their reputation in a disciplined way, ensuring that they maintain control over their public profile, online and offline.
@@ -76,6 +82,23 @@ title: Home
       </div>
     </p>
   </article>
+
+    <article>
+    <p class="db pv1 ph2 ph0-l black">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
+          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h2 class="f2 ashblue ttu mt0-ns">Work smarter</h2>
+          <p class="f3 f5-l lh-copy mt0">
+            As a leader in your organisation, your most precious resource is time. You need to make the most out of your meetings and public appearances, and be able to assess your impact and reach with facts and figures. Ashbright has extensive experience supporting leaders as their in-house advisors, providing intelligence on prospective partners, preparing detailed briefings on industry trends and monitoring media coverage. We help to target influential partners and speaking opportunities, provide media training and support leaders throughout their public engagements, including detailed post-event reports including data illustrating impact and reach.
+          </p>
+        </div>
+      </div>
+    </p>
+  </article>
+
 <article>
     <p class="db pv1 ph2 ph0-l black">
       <div class="flex flex-column flex-row-ns">
