--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
         <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">Strategic communication</h1>
-        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">The power of communication is limited only by our imagination</p>
+        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">Imagination is our only limit</p>
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
       </div>
     </div>
@@ -31,9 +31,9 @@ title: Home
 <section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l">
   <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information channels and data makes new demands on all of us every day, especially for large organizations and the people who lead them.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information channels and data makes new demands on all of us every day, especially for high profile organisations and the people who lead them.</p>
 
-  <p class="f3 f-sub-ns ph2 ph4-l lh-copy mt2 mb3 i">Ashbright was created to help companies, individuals and governments survive and thrive in this new fast-moving landscape.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright was created to help companies, individuals and governments survive and thrive in this new fast-moving landscape.</p>
 
 </section>
 
@@ -41,9 +41,7 @@ title: Home
   <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pv5-l">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals.</p>
-
-    <p class="f3 ph2 ph4-l lh-copy mt2 white">With decades of experience working across corporate communications, investor relations, international media and public affairs, we support clients in leadership positions to mobilise resources, shape perceptions and influence behaviour. We design and execute state-of-the-art communications programmes for a variety of situations including marketing communications and branding, corporate change, crisis and litigation, financial transactions and reputation management.</p>
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. We provide strategic communications counsel to companies, governments and successful individuals. With decades of experience working across corporate communications, investor relations, international media and public affairs, we support clients in leadership positions to mobilise resources, shape perceptions and influence behaviour. We design and execute state-of-the-art communications programmes for a variety of situations including reputation and crisis management, change programmes and marketing communications.</p>
   <div>
 
 </section>
@@ -51,101 +49,27 @@ title: Home
 
 <section id="situations" class="mw7-ns center ph2 pv4 pv5-l ph5-ns ph4-l">
   <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
-  <article>
-    <p class="db pv1 ph2 ph0-l black">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Where do I start?</h2>
-          <p class="f3 f5-l lh-copy mt0">
-            The forces of disruption and complexity in the business world demand high-level communications awareness from leaders. Latest polling data shows that audiences want authenticity and immediacy, but trust in authority, leaders and brands is at an historic low. The separation between marketing, news, propaganda and disinformation are blurring as people have become the new media. Privacy and confidentiality are under threat. Activist journalism is seeing a renaissance, while trolls and bots are encroaching on the information space. Data and analytics have enabled unprecedented audience profiling and reach. Ashbright has decades of experience in building state-of-the-art communications functions, helping leaders to gather intelligence and communicate effectively in an increasingly complex world.
-          </p>
-        </div>
-      </div>
-    </p>
-  </article>
 
-  <article>
-    <p class="db pv1 ph2 ph0-l black">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Reputation</h2>
-          <p class="f3 f5-l lh-copy mt0">
-            As a high-profile individual, your reputation is a priceless asset. But with the proliferation of public platforms, your reputation is constantly under threat from disgruntled employees, business rivals and inaccurate reporting. Ashbright has decades of experience helping high profile individuals and corporate leaders to manage their reputation in a disciplined way, ensuring that they maintain control over their public profile, online and offline.
-          </p>
-        </div>
-      </div>
-    </p>
-  </article>
+  {% for situation in site.situations %}
 
     <article>
-    <p class="db pv1 ph2 ph0-l black">
+    <a href="{{ situation.url }}" class="db pv1 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Aerial_View_of_Umbrellas_in_a_Beach_-_License_for_£24_80_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
+          <img src="{{ site.baseurl }}/images/{{ situation.image }}" class="db" alt="https://www.picfair.com/pics/02976135-aerial-view-of-umbrellas-in-a-beach">
         </div>
         <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Work smarter</h2>
+          <h2 class="f2 ashblue ttu mt0-ns">{{ situation.title }}</h2>
           <p class="f3 f5-l lh-copy mt0">
-            As a leader in your organisation, your most precious resource is time. You need to make the most out of your meetings and public appearances, and be able to assess your impact and reach with facts and figures. Ashbright has extensive experience supporting leaders as their in-house advisors, providing intelligence on prospective partners, preparing detailed briefings on industry trends and monitoring media coverage. We help to target influential partners and speaking opportunities, provide media training and support leaders throughout their public engagements, including detailed post-event reports including data illustrating impact and reach.
+            {{ situation.excerpt }}
           </p>
         </div>
       </div>
-    </p>
+    </a>
   </article>
 
-<article>
-    <p class="db pv1 ph2 ph0-l black">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Storm_Clouds_-_License_for_£37_20_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/01309002-storm-clouds">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Crisis</h2>
-          <p class="f3 f5-l lh-copy mt0">
-            You will not be judged by the crises you face, but how you manage them. In the social media age, there is no time to waste when crisis hits. Whether a leadership succession, litigation, accident or personal crisis, you need to act fast and smart to manage expectations and turn a crisis into an opportunity.
-          </p>
-        </div>
-      </div>
-    </p>
-  </article>
+  {% endfor %}
 
-  <article>
-    <p class="db pv1 ph2 ph0-l black">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Sidewalk_chess_-_License_for_£4_96_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/04785674-sidewalk-chess">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Transformation</h2>
-          <p class="f3 f5-l lh-copy mt0">
-            Poor communication is one of the main causes of failure in change programmes. Ashbright has decades of experience working alongside senior leaders and management consultants on restructuring programmes to define strategy, engage stakeholders, overcome resistance and meet project deadlines.
-          </p>
-        </div>
-      </div>
-    </p>
-  </article>
-
-  <article>
-    <p class="db pv1 ph2 ph0-l black">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
-          <img src="{{ site.baseurl }}/images/Hot_Air_Balloons_-_License_for_£12_39_on_Picfair.png" class="db" alt="https://www.picfair.com/pics/0197175-hot-air-balloons">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h2 class="f2 ashblue ttu mt0-ns">Marketing</h2>
-          <p class="f3 f5-l lh-copy mt0">
-            A great product or service can still fail to meet targets without an effective communications campaign. Our work will ensure that you attract the attention of your key markets and stakeholders in an increasingly competitive marketplace through specialised content development and strategic media relations. Our work encompasses stakeholder mapping, peer benchmarking, media outreach, corporate content drafting, film scripts, social media content, speech writing and thought leadership positioning.
-          </p>
-        </div>
-      </div>
-    </p>
-  </article>
 </section>
 
 <script>
