--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ description: Strategic communication
 <section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l">
   <h2 class="f1 ph2 ph4-l ashblue ttu">Why are we here</h2>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">The explosion of information channels and data makes new demands on all of us every day, especially for high-profile organisations and the people who lead them.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">The digital revolution makes new demands on all of us every day, especially high-profile organisations and the people who lead them.</p>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright was created to help companies, individuals and governments survive and thrive in this new fast-moving landscape.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright was created to help successful individuals, companies and governments survive and thrive in this new fast-moving landscape.</p>
 
 </section>
 
