--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: Strategic communication
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
         <h1 class="f-head f-head-ns fw4 white-90 mb0 lh-title ttu">Strategic communication</h1>
-        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">Enabling intelligent leadership</p>
+        <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">Informing intelligent leadership</p>
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
       </div>
     </div>
