--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Strategic communication
   </div>
 </header>
 
-<section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l">
+<section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
   <h2 class="f1 ph2 ph4-l ashblue ttu">What we do</h2>
 
   <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals. We use data and intelligence to understand and engage people. We design and execute state-of-the-art programmes to enable leaders to mobilise resources, shape perceptions and influence behaviour.</p>
@@ -177,26 +177,5 @@ description: Strategic communication
 
 </section>
 
-<script>
 
-"use strict";function scrollIt(e){function n(){var e="now"in window.performance?performance.now():(new Date).getTime(),c=Math.min(1,(e-a)/t),m=o[u](c);return window.scroll(0,Math.ceil(m*(d-i)+i)),window.pageYOffset===d?void(r&&r()):void requestAnimationFrame(n)}var t=arguments.length<=1||void 0===arguments[1]?200:arguments[1],u=arguments.length<=2||void 0===arguments[2]?"linear":arguments[2],r=arguments[3],o={linear:function(e){return e},easeInQuad:function(e){return e*e},easeOutQuad:function(e){return e*(2-e)},easeInOutQuad:function(e){return.5>e?2*e*e:-1+(4-2*e)*e},easeInCubic:function(e){return e*e*e},easeOutCubic:function(e){return--e*e*e+1},easeInOutCubic:function(e){return.5>e?4*e*e*e:(e-1)*(2*e-2)*(2*e-2)+1},easeInQuart:function(e){return e*e*e*e},easeOutQuart:function(e){return 1- --e*e*e*e},easeInOutQuart:function(e){return.5>e?8*e*e*e*e:1-8*--e*e*e*e},easeInQuint:function(e){return e*e*e*e*e},easeOutQuint:function(e){return 1+--e*e*e*e*e},easeInOutQuint:function(e){return.5>e?16*e*e*e*e*e:1+16*--e*e*e*e*e}},i=window.pageYOffset,a="now"in window.performance?performance.now():(new Date).getTime(),c=Math.max(document.body.scrollHeight,document.body.offsetHeight,document.documentElement.clientHeight,document.documentElement.scrollHeight,document.documentElement.offsetHeight),m=window.innerHeight||document.documentElement.clientHeight||document.getElementsByTagName("body")[0].clientHeight,s="number"==typeof e?e:e.offsetTop,d=Math.round(m>c-s?c-m:s);return"requestAnimationFrame"in window==!1?(window.scroll(0,d),void(r&&r())):void n()}
-
-// Scroll to about
-document.querySelector('.about').addEventListener('click', function () {
-  scrollIt(document.querySelector('#about'), 300, 'easeOutQuad');
-});
-
-// Scroll to situations
-document.querySelector('.situations').addEventListener('click', function () {
-  scrollIt(document.querySelector('#situations'), 300, 'easeOutQuad');
-});
-
-// Scroll to contact
-document.querySelector('.contact').addEventListener('click', function () {
-  scrollIt(document.querySelector('#contact'), 300, 'easeOutQuad');
-});
-
-
-
-</script>
 
